"Outline Selected" overlay doesnt affect armatures #66934

Closed
opened 2019-07-14 20:25:18 +07:00 by Philipp Oeser · 6 comments

System Information
Operating system: fedora 30, 5.1.16-300.fc30.x86_64
Graphics card: nvidia 970m, 430.26 drivers

Blender Version
Broken: e3c586e262, master, 2019-07-13
Worked: 2.79

Short description of error
"Outline Selected" overlay doesnt affect armatures, if you disable that option, armatures in objectmode will still draw an outline.

Exact steps for others to reproduce the error
armatures_outline_selected.blend

  • Open file
  • Outline Selected viewport overlay should be disabled
  • All objects are selected, notice Armatures will still draw an outline
  • 2.79 didnt do that
  • If this is by design: sorry for the noise...
**System Information** Operating system: fedora 30, 5.1.16-300.fc30.x86_64 Graphics card: nvidia 970m, 430.26 drivers **Blender Version** Broken: e3c586e262dd70a1b7e44f2ae3b76cb1ce881ef1, master, 2019-07-13 Worked: 2.79 **Short description of error** "Outline Selected" overlay doesnt affect armatures, if you disable that option, armatures in objectmode will still draw an outline. **Exact steps for others to reproduce the error** [armatures_outline_selected.blend](https://archive.blender.org/developer/F7608615/armatures_outline_selected.blend) - Open file - `Outline Selected` viewport overlay should be disabled - All objects are selected, notice Armatures will still draw an outline - 2.79 didnt do that - If this is by design: sorry for the noise...
Poster
Collaborator

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Clément Foucault was assigned by Philipp Oeser 2019-07-14 20:26:38 +07:00
Poster
Collaborator

Added subscriber: @fclem

Added subscriber: @fclem
Poster
Collaborator

@fclem: looked a bit at code, this might even be by design... if not: super-low prio...

@fclem: looked a bit at code, this might even be by design... if not: super-low prio...
Clément Foucault was unassigned by Dalai Felinto 2019-12-23 16:33:43 +07:00

This issue was referenced by 005c66395a

This issue was referenced by 005c66395a8a9a00ee8313183fa329357dc3ddc9

This issue was referenced by c26abd1c29

This issue was referenced by c26abd1c29a25e364fb3f683139364c0d2bb7918

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-06-23 23:46:05 +07:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66934
There is no content yet.