Fix T66934 Overlay: "Outline Selected" overlay doesnt affect armatures

This is a really small fix. Could be included in 2.83 LTS branch.